objects/AreaState__c.object
<CustomObject>
    <description>A list of states that an area comprises.</description>
    <fields>
        <fullName>AreaStateEID__c</fullName>
        <description>The Enterprise ID for this Area State.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Area State.</inlineHelpText>
        <label>Area State EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>The area containing this entire state.</description>
        <inlineHelpText>The area containing this entire state.</inlineHelpText>
        <label>Area</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipLabel>Area States</relationshipLabel>
        <relationshipName>AreaStates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A state that is in this area.</description>
        <inlineHelpText>A state that is in this area.</inlineHelpText>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Area States</relationshipLabel>
        <relationshipName>AreaStates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Area State</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Area State Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Area States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>